# email-autoreg

./: .envsample  .gitignore  README.md  main.py  pyproject.toml
core/: captcha.py  env.py  register.py
core/mail/: main.py
core/utils/: file.py  log.py  time.py
core/utils/generator/: dots.py  nickname.py  password.py  tags.py  useragent.py
